# envop

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: env_parser.rs  main.rs  op.rs
