[package]
name = "envop"
version = "0.2.1"
edition = "2021"
description = "Sube variables de un archivo .env a un item de 1Password (op CLI), un campo por variable, con upsert y generación de referencias op://"
license = "MIT"

[[bin]]
name = "envop"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
